<resources>
    <string name="app_name">CareTaker</string>
    <string name="todo">TODO</string>
    <string name="at_your_doorstep">At your doorstep</string>
    <string name="email">Email/Mobile</string>
    <string name="password1">Password</string>
    <string name="service_provider_signup_login">Service Provider Signup/Login</string>
    <string name="new_to_caretaker_sign_up">New to CareTaker? Sign Up</string>
    <string name="login">Login</string>
    <string name="signup_login">SignUp/Login</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="age">Age</string>
    <string name="already_signed_in_login">Already Signed in ? Login</string>
    <string name="signup">SIGNUP</string>
    <string name="gender">Gender</string>
    <string name="email_signup">Email</string>
    <string name="sign_up">SIGN UP</string>
    <string name="hair_cut_shave_massage_etc">Hair cut,shave,massage etc.</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="description">description</string>
    <string name="title_activity_homenav1">homenav1</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
